Make autocomplete suggestions visible. Fixes #347

--- a/styles/autocomplete.less
+++ b/styles/autocomplete.less
@@ -50,6 +50,10 @@ autocomplete-suggestion-list {
                             color: @base-color;
                         }
                     }
+
+                    .right-label {
+                        color: darken(@accent-text-color, 15%);
+                    }
                 }
             }
         }
